src/main/java/com/example/cto/error/exceptions/RequestAlreadyExistsException.java
package com.example.cto.error.exceptions;

public class BadRequestException extends RuntimeException{
    public BadRequestException(String message) {
        super(message);
    }
}
